fix bad spacing on contact page

--- a/rg.less
+++ b/rg.less
@@ -439,7 +439,7 @@ main{
 }
 
 @media screen and (max-height:699px) {
-  .contact .text-area.slider { margin-bottom: 25px; }
+  .contact .text-area.slider { margin-bottom: 50px; }
   footer {margin-top: 50px;}
 }
 
